---
source: relay-general/src/pii/processor.rs
expression: "&data"
---
Event {
    id: ~,
    level: ~,
    version: ~,
    ty: ~,
    fingerprint: ~,
    culprit: ~,
    transaction: ~,
    transaction_info: ~,
    time_spent: ~,
    logentry: ~,
    logger: ~,
    modules: ~,
    platform: ~,
    timestamp: ~,
    start_timestamp: ~,
    received: ~,
    server_name: ~,
    release: ~,
    dist: ~,
    environment: ~,
    site: ~,
    user: ~,
    request: ~,
    contexts: ~,
    breadcrumbs: ~,
    exceptions: ~,
    stacktrace: ~,
    template: ~,
    threads: ~,
    tags: ~,
    extra: ~,
    debug_meta: ~,
    client_sdk: ~,
    ingest_path: ~,
    errors: ~,
    key_id: ~,
    project: ~,
    grouping_config: ~,
    checksum: ~,
    csp: ~,
    hpkp: Meta {
        remarks: [],
        errors: [
            Error {
                kind: InvalidData,
                data: {
                    "reason": String(
                        "expected hpkp",
                    ),
                },
            },
        ],
        original_length: None,
        original_value: Some(
            String(
                "invalid data [ip]",
            ),
        ),
    },
    expectct: ~,
    expectstaple: ~,
    spans: ~,
    measurements: ~,
    breakdowns: ~,
    _metrics: ~,
    other: {},
}
